# cookiecutter-conda-package

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: autoupdate.yml  monthly.yml  on-push.yml  pre-commit.yml  test-cruft.yml  weekly.yml
docs/: conf.py  index.md
my_package/: __init__.py
tests/: test_00_version.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config-cruft.yaml  .pre-commit-config-weekly.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/: cruft-update-template.md
{{cookiecutter.project_name}}/.github/workflows/: on-push.yml  weekly.yaml
{{cookiecutter.project_name}}/ci/: environment-ci.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.md  index.rst
{{cookiecutter.project_name}}/tests/: test_00_version.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config-cruft.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment-minver.yml  environment.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: cruft-update.yaml  cruft.yaml  on-push.yml  pre-commit.yml  weekly.yaml
{{cookiecutter.project_slug}}/tests/: test_00_version.py  test_10_import.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.repo_name}}/: pyproject.toml
